--- a/src/appmitutoyo/interfaces/DimensionesGUI.form
+++ b/src/appmitutoyo/interfaces/DimensionesGUI.form
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.2" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
-    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-      <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-        <TitledBorder title="Especificaciones"/>
-      </Border>
-    </Property>
-    <Property name="name" type="java.lang.String" value="Calibre" noResource="true"/>
+    <Property name="name" type="java.lang.String" value="Dimensiones" noResource="true"/>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -19,49 +14,21 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-56,0,0,1,-80"/>
   </AuxValues>
 
-  <Layout>
-    <DimensionLayout dim="0">
-      <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="lblRefArticulo" min="-2" pref="91" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jtxtRefArticulo" linkSize="4" min="-2" pref="105" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="lblSerie" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="32767" attributes="0"/>
-              <Component id="jtxtSerie" linkSize="4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
-          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
-      </Group>
-    </DimensionLayout>
-    <DimensionLayout dim="1">
-      <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblRefArticulo" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jtxtRefArticulo" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblSerie" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jtxtSerie" alignment="1" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jPanel1" max="32767" attributes="0"/>
-          </Group>
-      </Group>
-    </DimensionLayout>
+  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
+    <Property name="axis" type="int" value="3"/>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="panelDimensiones">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Dimensiones"/>
           </Border>
         </Property>
+        <Property name="opaque" type="boolean" value="false"/>
       </Properties>
 
       <Layout>
@@ -75,18 +42,18 @@
                       <Component id="lblMedida_b" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblMedida_d" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="37" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jtxtLongitud" linkSize="2" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="jtxtPeso" linkSize="2" alignment="0" pref="57" max="32767" attributes="0"/>
                       <Component id="jtxtMedida_b" linkSize="2" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="jtxtMedida_d" linkSize="2" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="37" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="lblMedida_a" linkSize="5" min="-2" pref="73" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="32767" attributes="0"/>
+                          <EmptySpace type="separate" pref="43" max="32767" attributes="0"/>
                           <Component id="jtxtMedida_a" linkSize="2" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
@@ -113,21 +80,21 @@
                       <Component id="lblLongitud" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtLongitud" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="17" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lblPeso" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtPeso" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="lblMedida_a" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtMedida_a" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="17" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lblMedida_b" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtMedida_b" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="lblMedida_c" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtMedida_c" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="18" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lblMedida_d" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtMedida_d" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -212,28 +179,5 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="lblRefArticulo">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="URW Gothic" size="13" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Ref. Articulo"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="jtxtRefArticulo">
-      <Properties>
-        <Property name="name" type="java.lang.String" value="Especificaciones" noResource="true"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblSerie">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="URW Gothic" size="13" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Serie"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="jtxtSerie">
-    </Component>
   </SubComponents>
 </Form>
