--- a/src/appmitutoyo/interfaces/ArticuloGUI.form
+++ b/src/appmitutoyo/interfaces/ArticuloGUI.form
@@ -71,6 +71,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtxtRefArticulo">
+          <Events>
+            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jtxtRefArticuloPropertyChange"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblSerie">
           <Properties>
