--- a/src/appmitutoyo/interfaces/DimensionesGUI.form
+++ b/src/appmitutoyo/interfaces/DimensionesGUI.form
@@ -14,7 +14,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-56,0,0,1,-80"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-54,0,0,1,87"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
@@ -37,35 +37,41 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblLongitud" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblPeso" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_b" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_d" linkSize="6" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="37" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jtxtLongitud" linkSize="2" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="jtxtPeso" linkSize="2" alignment="0" pref="57" max="32767" attributes="0"/>
-                      <Component id="jtxtMedida_b" linkSize="2" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_d" linkSize="2" alignment="0" max="32767" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="37" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="lblMedida_a" linkSize="5" min="-2" pref="73" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" pref="43" max="32767" attributes="0"/>
-                          <Component id="jtxtMedida_a" linkSize="2" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="lblMedida_b" linkSize="6" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jftxMedida_b" linkSize="7" min="-2" pref="45" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="32767" attributes="0"/>
+                          <Component id="lblMedida_c" linkSize="5" min="-2" pref="73" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jftxMedida_c" linkSize="7" min="-2" pref="46" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="lblMedida_d" linkSize="6" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jftxMedida_d" linkSize="7" min="-2" pref="41" max="-2" attributes="0"/>
+                          <EmptySpace type="separate" max="32767" attributes="0"/>
+                          <Component id="lblMedida_e" linkSize="5" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jftxMedida_e" linkSize="7" min="-2" pref="50" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblMedida_e" linkSize="5" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblMedida_c" linkSize="5" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="lblLongitud" linkSize="6" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jftxLongitud" linkSize="7" min="-2" pref="45" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="lblPeso" linkSize="6" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jftxPeso" linkSize="7" min="-2" pref="45" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jtxtMedida_e" linkSize="2" min="-2" pref="39" max="-2" attributes="0"/>
-                              <Component id="jtxtMedida_c" linkSize="2" min="-2" pref="57" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace type="separate" max="32767" attributes="0"/>
+                          <Component id="lblMedida_a" linkSize="5" min="-2" pref="73" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jftxMedida_a" linkSize="7" min="-2" pref="46" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -76,30 +82,30 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblLongitud" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtLongitud" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="lblLongitud" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxLongitud" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="17" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblPeso" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPeso" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_a" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_a" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="lblPeso" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPeso" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_a" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_a" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="17" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblMedida_b" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_b" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_c" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_c" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="lblMedida_b" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_b" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_c" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_c" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="18" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblMedida_d" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_d" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_e" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtMedida_e" linkSize="3" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="lblMedida_d" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_d" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_e" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_e" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -139,14 +145,6 @@
             <Property name="text" type="java.lang.String" value="d [mm]"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtLongitud">
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtxtPeso">
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtxtMedida_b">
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtxtMedida_d">
-        </Component>
         <Component class="javax.swing.JLabel" name="lblMedida_a">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -171,11 +169,61 @@
             <Property name="text" type="java.lang.String" value="e [mm]"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtMedida_a">
+        <Component class="javax.swing.JFormattedTextField" name="jftxLongitud">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtMedida_c">
+        <Component class="javax.swing.JFormattedTextField" name="jftxPeso">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtMedida_e">
+        <Component class="javax.swing.JFormattedTextField" name="jftxMedida_b">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxMedida_d">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxMedida_a">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxMedida_c">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxMedida_e">
+          <Properties>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
