--- a/src/appmitutoyo/interfaces/MetricaDeInterioresGUI.form
+++ b/src/appmitutoyo/interfaces/MetricaDeInterioresGUI.form
@@ -14,7 +14,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-66,0,0,1,-112"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-97,0,0,1,-75"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
@@ -33,40 +33,27 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace pref="37" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="lblRangoInterior" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jftxRangoInterior" linkSize="1" min="-2" pref="50" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lblMetricaInterior" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblPuntosMediciion" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jcboxPuntosMedicion" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jftxMetricaInterior" linkSize="1" min="-2" pref="50" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace pref="22" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblMedida_R" alignment="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblMedida_f" alignment="1" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace pref="263" max="32767" attributes="0"/>
-                          <Component id="lblMedida_g" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="lblMetricaInterior" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblRangoInterior" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblPuntosMediciion" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jftxMetricaInterior" linkSize="1" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="jftxRangoInterior" linkSize="1" min="-2" pref="50" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="jcboxPuntosMedicion" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lblMedida_R" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_f" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_g" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jftxMedida_R" linkSize="1" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="jftxMetrica_f" linkSize="1" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
@@ -80,25 +67,25 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="lblRangoInterior" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jftxRangoInterior" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_R" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jftxMedida_R" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lblRangoInterior" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxRangoInterior" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_R" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_R" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="lblMetricaInterior" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jftxMetricaInterior" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_f" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jftxMetrica_f" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lblMetricaInterior" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMetricaInterior" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_f" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMetrica_f" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="lblPuntosMediciion" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jcboxPuntosMedicion" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="lblMedida_g" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jftxMedida_g" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lblPuntosMediciion" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcboxPuntosMedicion" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMedida_g" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxMedida_g" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -159,15 +146,20 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
           </Properties>
-          <Events>
-            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jftxRangoInteriorPropertyChange"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftxMetrica_f">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
             </Property>
           </Properties>
         </Component>
@@ -176,12 +168,20 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftxMedida_R">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
+            </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
             </Property>
           </Properties>
         </Component>
@@ -190,15 +190,23 @@
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="jcboxPuntosMedicion">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="1"/>
-                <StringItem index="1" value="2"/>
-                <StringItem index="2" value="3"/>
+              <StringArray count="4">
+                <StringItem index="0" value="-Seleccione-"/>
+                <StringItem index="1" value="1"/>
+                <StringItem index="2" value="2"/>
+                <StringItem index="3" value="3"/>
               </StringArray>
             </Property>
           </Properties>
