--- a/src/appmitutoyo/interfaces/MetricaDeMedicionGUI.form
+++ b/src/appmitutoyo/interfaces/MetricaDeMedicionGUI.form
@@ -14,7 +14,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-2,0,0,0,-3"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-4,0,0,0,-10"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
@@ -43,53 +43,47 @@
                       <Component id="lblPrecision" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblRango" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jtxtPresionMedida" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtGraduacion" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtResolucion" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPrecision" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jftxRango" linkSize="1" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="jftxRango" linkSize="3" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="jftxPrecision" linkSize="3" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxResolucion" linkSize="3" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxGraduacion" linkSize="3" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPresionDeMedida" linkSize="3" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="25" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace pref="21" max="32767" attributes="0"/>
-                          <Component id="lblRango" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jftxRango" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      </Group>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="lblRango" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxRango" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblPrecision" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPrecision" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" pref="19" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblPrecision" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPrecision" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblResolucion" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtResolucion" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" pref="20" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblResolucion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxResolucion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblGraduacion" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtGraduacion" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" pref="20" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblGraduacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxGraduacion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblPresionMedida" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPresionMedida" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" pref="20" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblPresionMedida" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPresionDeMedida" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="21" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -111,8 +105,6 @@
             <Property name="text" type="java.lang.String" value="Precision&#xb1; [mm]"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtPrecision">
-        </Component>
         <Component class="javax.swing.JLabel" name="lblGraduacion">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -120,8 +112,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Graduacion"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jtxtGraduacion">
         </Component>
         <Component class="javax.swing.JLabel" name="lblResolucion">
           <Properties>
@@ -131,8 +121,6 @@
             <Property name="text" type="java.lang.String" value="Resolucion (mm)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtResolucion">
-        </Component>
         <Component class="javax.swing.JLabel" name="lblPresionMedida">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -141,14 +129,21 @@
             <Property name="text" type="java.lang.String" value="Presion de medida [N]"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtPresionMedida">
-        </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftxRango">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format subtype="1" type="0"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxPrecision">
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxResolucion">
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxGraduacion">
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jftxPresionDeMedida">
         </Component>
       </SubComponents>
     </Container>
