--- a/src/appmitutoyo/interfaces/MetricaMicrometricaGUI.form
+++ b/src/appmitutoyo/interfaces/MetricaMicrometricaGUI.form
@@ -14,7 +14,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-11,0,0,1,16"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-11,0,0,0,-7"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
@@ -37,26 +37,19 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblParalelismo" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblPerpendicularidad" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblRectitud" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblPlanitud" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace pref="35" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jtxtParalelismo" linkSize="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jtxtPlanitud" linkSize="1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jtxtPerpendicularidad" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jtxtRectitud" linkSize="1" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="lblAvance" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="jtxtAvance" linkSize="1" min="-2" pref="50" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="lblParalelismo" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblPlanitud" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblRectitud" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblPerpendicularidad" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAvance" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jftxAvance" linkSize="2" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="jftxPlanitud" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxParalelismo" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPerpendicularidad" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxRectitud" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -68,27 +61,27 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblAvance" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtAvance" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxAvance" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblPlanitud" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPlanitud" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPlanitud" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblParalelismo" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtParalelismo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxParalelismo" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblPerpendicularidad" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtPerpendicularidad" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxPerpendicularidad" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblRectitud" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jtxtRectitud" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jftxRectitud" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -136,15 +129,15 @@
             <Property name="text" type="java.lang.String" value="Rectitud (&#xb5;m)"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtAvance">
+        <Component class="javax.swing.JFormattedTextField" name="jftxAvance">
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtPlanitud">
+        <Component class="javax.swing.JFormattedTextField" name="jftxPlanitud">
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtParalelismo">
+        <Component class="javax.swing.JFormattedTextField" name="jftxParalelismo">
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtPerpendicularidad">
+        <Component class="javax.swing.JFormattedTextField" name="jftxPerpendicularidad">
         </Component>
-        <Component class="javax.swing.JTextField" name="jtxtRectitud">
+        <Component class="javax.swing.JFormattedTextField" name="jftxRectitud">
         </Component>
       </SubComponents>
     </Container>
