--- a/src/appmitutoyo/interfaces/ArticuloGUI.form
+++ b/src/appmitutoyo/interfaces/ArticuloGUI.form
@@ -2,8 +2,14 @@
 
 <Form version="1.2" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
+    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+      <Font name="URW Gothic" size="13" style="0"/>
+    </Property>
     <Property name="name" type="java.lang.String" value="Articulo" noResource="true"/>
   </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Articulo"/>
+  </AccessibilityProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -28,6 +34,7 @@
             <TitledBorder title="Articulo"/>
           </Border>
         </Property>
+        <Property name="name" type="java.lang.String" value="Articulo" noResource="true"/>
       </Properties>
 
       <Layout>
@@ -36,9 +43,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="lblRefArticulo" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jtxtRefArticulo" min="-2" pref="100" max="-2" attributes="0"/>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace pref="34" max="32767" attributes="0"/>
                   <Component id="lblSerie" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Component id="jtxtSerie" min="-2" pref="100" max="-2" attributes="0"/>
@@ -48,15 +55,15 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+              <Group type="102" attributes="0">
+                  <EmptySpace pref="13" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
                       <Component id="lblRefArticulo" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtRefArticulo" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="lblSerie" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="jtxtSerie" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="15" max="32767" attributes="0"/>
+                  <EmptySpace pref="17" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -71,9 +78,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtxtRefArticulo">
-          <Events>
-            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jtxtRefArticuloPropertyChange"/>
-          </Events>
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblSerie">
           <Properties>
@@ -84,6 +93,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jtxtSerie">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
