--- a/src/appmitutoyo/interfaces/MetricaMicrometricaGUI.form
+++ b/src/appmitutoyo/interfaces/MetricaMicrometricaGUI.form
@@ -169,6 +169,9 @@
               <Format subtype="1" type="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftxRectitud">
