--- a/src/mitutoyo/interfaces/FuncionesGUI.form
+++ b/src/mitutoyo/interfaces/FuncionesGUI.form
@@ -14,7 +14,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-106,0,0,1,-113"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-106,0,0,1,-114"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
@@ -35,13 +35,13 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jchkSelectorZeroAbs" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkCambioSentidoContaje" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkValoracionGoNg" min="-2" max="-2" attributes="0"/>
+                      <Component id="jchkCambioSentidoContaje" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="jchkValoracionGoNg" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jchkAjusteFino" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkSalidaDeDatos" min="-2" max="-2" attributes="0"/>
+                      <Component id="jchkFuncionTolerancia" min="-2" max="-2" attributes="0"/>
                       <Component id="jchkBloqueo" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -50,22 +50,25 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jchkSelectorZeroAbs" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkSalidaDeDatos" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jchkCambioSentidoContaje" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkAjusteFino" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="jchkSelectorZeroAbs" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="32767" attributes="0"/>
+                          <Component id="jchkCambioSentidoContaje" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="32767" attributes="0"/>
+                          <Component id="jchkValoracionGoNg" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="jchkFuncionTolerancia" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="32767" attributes="0"/>
+                          <Component id="jchkAjusteFino" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="32767" attributes="0"/>
+                          <Component id="jchkBloqueo" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jchkValoracionGoNg" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jchkBloqueo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -79,12 +82,12 @@
             <Property name="text" type="java.lang.String" value="Selector ZERO/ABS"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JCheckBox" name="jchkSalidaDeDatos">
+        <Component class="javax.swing.JCheckBox" name="jchkFuncionTolerancia">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="URW Gothic" size="13" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Salida de datos"/>
+            <Property name="text" type="java.lang.String" value="Funcion de tolerancia"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JCheckBox" name="jchkCambioSentidoContaje">
