--- a/src/mitutoyo/interfaces/FuncionesGUI.form
+++ b/src/mitutoyo/interfaces/FuncionesGUI.form
@@ -23,7 +23,9 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Funciones opcionales"/>
+            <TitledBorder title="Funciones opcionales">
+              <Font PropertyName="font" name="DialogInput" size="12" style="1"/>
+            </TitledBorder>
           </Border>
         </Property>
       </Properties>
