--- a/src/mitutoyo/interfaces/MetricaDeInterioresGUI.form
+++ b/src/mitutoyo/interfaces/MetricaDeInterioresGUI.form
@@ -23,7 +23,9 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Metrica de interiores"/>
+            <TitledBorder title="Metrica de interiores">
+              <Font PropertyName="font" name="Dialog" size="12" style="1"/>
+            </TitledBorder>
           </Border>
         </Property>
         <Property name="name" type="java.lang.String" value="Metrica de Interiores" noResource="true"/>
@@ -199,7 +201,7 @@
         <Component class="javax.swing.JComboBox" name="jcboxPuntosMedicion">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="URW Gothic" size="13" style="0"/>
+              <Font name="URW Gothic" size="11" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
