--- a/src/mitutoyo/interfaces/VisualizadorGUI.form
+++ b/src/mitutoyo/interfaces/VisualizadorGUI.form
@@ -27,6 +27,7 @@
               <Border PropertyName="innerBorder" info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Visualizador"/>
               </Border>
+              <Font PropertyName="font" name="Dialog" size="12" style="1"/>
             </TitledBorder>
           </Border>
         </Property>
@@ -100,6 +101,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jcbVisualizador">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="11" style="1"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="7">
                 <StringItem index="0" value="-Seleccione-"/>
